2009-03-13 Alexander Malysh <amalysh at kannel.org>
    * .cvsignore, Makefile.in, acinclude.m4, aclocal.m4, bootstrap.sh,
      configure, configure.in, gw-config.h.in, gwlib/charset.c: Use already
      defined in gettext AM_ICONV macro to detect and declare iconv. This
      fixes warning about const declaration.
      This macro defined in aclocal and therefore I renamed aclocal.m4 to
      acinclude.m4 and added bootstrap.sh. Please always use bootstrap.sh to
      create new configure script!

2009-03-08  Stipe Tolj  <stolj at kannel.org>
    * install-sh: use a more recent version taken from automake-1.10, in order
      to support wildcard filenames to install. This script is used in case
      the configure run finds no other BSD-compatible install program, i.e.
      required for Solaris 10 that has no such thing.

2009-03-02  Stipe Tolj  <stolj at kannel.org>
    * gw/bb_boxc.c: minor source re-formatting. NLC.
    
2009-03-02 Alexander Malysh <amalysh at kannel.org>
    * gwlib/charset.c: try to convert with iconv harder.

2009-03-01 Alexander Malysh <amalysh at kannel.org>
    * configure.in, configure: added openjade to search.
      Added /sw /opt/local to search path for docbook.

2009-03-01 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_boxc.c: applied patch that fixes handling of multiple boxes with
      equal name.
      Thanks to Ben Suffolk <ben at vanilla.net> for the initial patch.
      [Msg-ID: <C5DF9E3A-61B5-467D-91E0-0844B2AB4645@vanilla.net>]

2009-02-16  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: adding documetation section for the
      command line switch for showing the version.
    * gw/shared.[ch]: moved the version printing related public functions.
    * gwlib/utils.[ch]: places the printing functions here and adding the
      --version command line switch to the general command line intrpreting
      function.
      [Msg-Id: <4996DF94.5010505@tolj.org>]
      